// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render pagination 1`] = `
<div
  className="a b c"
>
  <ul
    aria-describedby={null}
    className="a b c d e f g h i j k l m n o"
    role="navigation"
  >
    <li
      className="m p q r s n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <svg
          aria-label=""
          className="ae"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.463,4.517l-3.3,3.3a.263.263,0,0,0,0,.371l3.3,3.3a.263.263,0,0,0,.448-.186V4.7A.262.262,0,0,0,9.463,4.517Z"
          />
        </svg>
      </a>
    </li>
    <li
      className="m p af ag s ah ai"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="m p aj ak al"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab al ac"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="m p aj ak al"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab al ac"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="m p aj ak al"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab al ac"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="m p aj ak al"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab al ac"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="m p af ag al n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab al ac"
        href="#"
        onClick={[Function]}
      >
        <svg
          aria-label=""
          className="ae am"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.537,11.483l3.3-3.3a.263.263,0,0,0,0-.371l-3.3-3.3a.262.262,0,0,0-.448.186v6.6A.262.262,0,0,0,6.537,11.483Z"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination 2`] = `
"
.a:after {
  content: \\"\\"
}

.b:after {
  display: table
}

.c:after {
  clear: both
}

.d {
  list-style: none
}

.e {
  margin-top: 0px
}

.f {
  margin-left: 0px
}

.g {
  margin-right: 0px
}

.h {
  margin-bottom: 0px
}

.i {
  padding-top: 0px
}

.j {
  padding-left: 0px
}

.k {
  padding-right: 0px
}

.l {
  padding-bottom: 0px
}

.m {
  float: left
}

.n {
  border-radius: 3px
}

.o {
  box-shadow: none
}

.p {
  position: relative
}

.q {
  background-color: #ededed
}

.r {
  color: #666
}

.s {
  cursor: default
}

.t {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.u {
  display: block
}

.v {
  padding-top: .7em
}

.w {
  padding-bottom: .5em
}

.x {
  padding-left: 1em
}

.y {
  padding-right: 1em
}

.z {
  text-decoration: none
}

.ab {
  color: inherit
}

.ac:focus {
  z-index: 1
}

.ae {
  height: 15px
}

.af {
  background-color: #408BC9
}

.ag {
  color: #fff
}

.ah {
  border-color: #62a1d8
}

.ai {
  z-index: 1
}

.aj {
  background-color: #fff
}

.ak {
  color: #408BC9
}

.al {
  cursor: pointer
}

.am {
  fill: #fff
}
"
`;

exports[`should render pagination loading 1`] = `
<div
  className="a b c"
>
  <ul
    aria-describedby={null}
    className="a b c d e f g h i j k l m n o"
    role="navigation"
  >
    <li
      className="m p q r s n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <svg
          aria-label=""
          className="ae"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.463,4.517l-3.3,3.3a.263.263,0,0,0,0,.371l3.3,3.3a.263.263,0,0,0,.448-.186V4.7A.262.262,0,0,0,9.463,4.517Z"
          />
        </svg>
      </a>
    </li>
    <li
      className="m p af ag s ah ai"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <div
          className="aj ak al am an ao ap aq ar as at au"
        >
          <svg
            viewBox="0 0 40 40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50%"
              cy="50%"
              r="40%"
            />
          </svg>
        </div>
      </a>
    </li>
    <li
      className="m p av aw ax"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab ax ac"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="m p av aw ax"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab ax ac"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="m p av aw ax"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab ax ac"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="m p av aw ax"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab ax ac"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="m p af ag ax n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab ax ac"
        href="#"
        onClick={[Function]}
      >
        <svg
          aria-label=""
          className="ae ay"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.537,11.483l3.3-3.3a.263.263,0,0,0,0-.371l-3.3-3.3a.262.262,0,0,0-.448.186v6.6A.262.262,0,0,0,6.537,11.483Z"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination loading 2`] = `
"
@-webkit-keyframes k1 {
  0% {
    stroke-dasharray: 1,95;
    stroke-dashoffset: 0;
    transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    -webkit-transform: rotate(0deg)
  }

  50% {
    stroke-dasharray: 85,95;
    stroke-dashoffset: -25
  }

  100% {
    stroke-dasharray: 85,95;
    stroke-dashoffset: -93;
    transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
    -webkit-transform: rotate(360deg)
  }
}

@-moz-keyframes k1 {
  0% {
    stroke-dasharray: 1,95;
    stroke-dashoffset: 0;
    transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    -webkit-transform: rotate(0deg)
  }

  50% {
    stroke-dasharray: 85,95;
    stroke-dashoffset: -25
  }

  100% {
    stroke-dasharray: 85,95;
    stroke-dashoffset: -93;
    transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
    -webkit-transform: rotate(360deg)
  }
}

@keyframes k1 {
  0% {
    stroke-dasharray: 1,95;
    stroke-dashoffset: 0;
    transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    -webkit-transform: rotate(0deg)
  }

  50% {
    stroke-dasharray: 85,95;
    stroke-dashoffset: -25
  }

  100% {
    stroke-dasharray: 85,95;
    stroke-dashoffset: -93;
    transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
    -webkit-transform: rotate(360deg)
  }
}

.a:after {
  content: \\"\\"
}

.b:after {
  display: table
}

.c:after {
  clear: both
}

.d {
  list-style: none
}

.e {
  margin-top: 0px
}

.f {
  margin-left: 0px
}

.g {
  margin-right: 0px
}

.h {
  margin-bottom: 0px
}

.i {
  padding-top: 0px
}

.j {
  padding-left: 0px
}

.k {
  padding-right: 0px
}

.l {
  padding-bottom: 0px
}

.m {
  float: left
}

.n {
  border-radius: 3px
}

.o {
  box-shadow: none
}

.p {
  position: relative
}

.q {
  background-color: #ededed
}

.r {
  color: #666
}

.s {
  cursor: default
}

.t {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.u {
  display: block
}

.v {
  padding-top: .7em
}

.w {
  padding-bottom: .5em
}

.x {
  padding-left: 1em
}

.y {
  padding-right: 1em
}

.z {
  text-decoration: none
}

.ab {
  color: inherit
}

.ac:focus {
  z-index: 1
}

.ae {
  height: 15px
}

.af {
  background-color: #408BC9
}

.ag {
  color: #fff
}

.ah {
  border-color: #62a1d8
}

.ai {
  z-index: 1
}

.aj {
  width: 15px
}

.ak {
  animation-duration: 2.5s;
  -webkit-animation-duration: 2.5s
}

.al {
  animation-iteration-count: infinite;
  -webkit-animation-iteration-count: infinite
}

.am {
  animation-timing-function: linear;
  -webkit-animation-timing-function: linear
}

.an>svg {
  height: 100%
}

.ao>svg {
  fill: transparent
}

.ap>svg {
  stroke-width: 6
}

.aq>svg {
  stroke: #BCBEC0
}

.ar>svg {
  animation-name: k1
}

.as>svg {
  animation-duration: 1.9s;
  -webkit-animation-duration: 1.9s
}

.at>svg {
  animation-iteration-count: infinite;
  -webkit-animation-iteration-count: infinite
}

.au>svg {
  animation-timing-function: linear;
  -webkit-animation-timing-function: linear
}

.av {
  background-color: #fff
}

.aw {
  color: #408BC9
}

.ax {
  cursor: pointer
}

.ay {
  fill: #fff
}
"
`;

exports[`should render pagination with an infoFormatter 1`] = `
<div
  className="a b c"
>
  <ul
    aria-describedby={null}
    className="a b c d e f g h i j k l m n o"
    role="navigation"
  >
    <li
      className="m p q r s n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <svg
          aria-label=""
          className="ae af"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.463,4.517l-3.3,3.3a.263.263,0,0,0,0,.371l3.3,3.3a.263.263,0,0,0,.448-.186V4.7A.262.262,0,0,0,9.463,4.517Z"
          />
        </svg>
      </a>
    </li>
    <li
      className="m p ag ah s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="m p q r ai aj ak"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab ai ac"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="m p ag ah s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="m p ag ah s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="m p ag ah s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="m p q r s n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <svg
          aria-label=""
          className="ae af"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.537,11.483l3.3-3.3a.263.263,0,0,0,0-.371l-3.3-3.3a.262.262,0,0,0-.448.186v6.6A.262.262,0,0,0,6.537,11.483Z"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination with an infoFormatter 2`] = `
"
.a:after {
  content: \\"\\"
}

.b:after {
  display: table
}

.c:after {
  clear: both
}

.d {
  list-style: none
}

.e {
  margin-top: 0px
}

.f {
  margin-left: 0px
}

.g {
  margin-right: 0px
}

.h {
  margin-bottom: 0px
}

.i {
  padding-top: 0px
}

.j {
  padding-left: 0px
}

.k {
  padding-right: 0px
}

.l {
  padding-bottom: 0px
}

.m {
  float: left
}

.n {
  border-radius: 3px
}

.o {
  box-shadow: none
}

.p {
  position: relative
}

.q {
  background-color: #408BC9
}

.r {
  color: #fff
}

.s {
  cursor: pointer
}

.t {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.u {
  display: block
}

.v {
  padding-top: .7em
}

.w {
  padding-bottom: .5em
}

.x {
  padding-left: 1em
}

.y {
  padding-right: 1em
}

.z {
  text-decoration: none
}

.ab {
  color: inherit
}

.ac:focus {
  z-index: 1
}

.ae {
  height: 15px
}

.af {
  fill: #fff
}

.ag {
  background-color: #fff
}

.ah {
  color: #408BC9
}

.ai {
  cursor: default
}

.aj {
  border-color: #62a1d8
}

.ak {
  z-index: 1
}
"
`;

exports[`should render pagination with the last page active 1`] = `
<div
  className="a b c"
>
  <ul
    aria-describedby={null}
    className="a b c d e f g h i j k l m n o"
    role="navigation"
  >
    <li
      className="m p q r s n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <svg
          aria-label=""
          className="ae af"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.463,4.517l-3.3,3.3a.263.263,0,0,0,0,.371l3.3,3.3a.263.263,0,0,0,.448-.186V4.7A.262.262,0,0,0,9.463,4.517Z"
          />
        </svg>
      </a>
    </li>
    <li
      className="m p ag ah s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="m p ag ah s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="m p ag ah s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="m p ag ah s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="m p q r ai aj ak"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab ai ac"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="m p al am ai n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab ai ac"
        href="#"
        onClick={[Function]}
      >
        <svg
          aria-label=""
          className="ae"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.537,11.483l3.3-3.3a.263.263,0,0,0,0-.371l-3.3-3.3a.262.262,0,0,0-.448.186v6.6A.262.262,0,0,0,6.537,11.483Z"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination with the last page active 2`] = `
"
.a:after {
  content: \\"\\"
}

.b:after {
  display: table
}

.c:after {
  clear: both
}

.d {
  list-style: none
}

.e {
  margin-top: 0px
}

.f {
  margin-left: 0px
}

.g {
  margin-right: 0px
}

.h {
  margin-bottom: 0px
}

.i {
  padding-top: 0px
}

.j {
  padding-left: 0px
}

.k {
  padding-right: 0px
}

.l {
  padding-bottom: 0px
}

.m {
  float: left
}

.n {
  border-radius: 3px
}

.o {
  box-shadow: none
}

.p {
  position: relative
}

.q {
  background-color: #408BC9
}

.r {
  color: #fff
}

.s {
  cursor: pointer
}

.t {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.u {
  display: block
}

.v {
  padding-top: .7em
}

.w {
  padding-bottom: .5em
}

.x {
  padding-left: 1em
}

.y {
  padding-right: 1em
}

.z {
  text-decoration: none
}

.ab {
  color: inherit
}

.ac:focus {
  z-index: 1
}

.ae {
  height: 15px
}

.af {
  fill: #fff
}

.ag {
  background-color: #fff
}

.ah {
  color: #408BC9
}

.ai {
  cursor: default
}

.aj {
  border-color: #62a1d8
}

.ak {
  z-index: 1
}

.al {
  background-color: #ededed
}

.am {
  color: #666
}
"
`;

exports[`should render with collapsed items 1`] = `
<div
  className="a b c"
>
  <ul
    aria-describedby={null}
    className="a b c d e f g h i j k l m n o"
    role="navigation"
  >
    <li
      className="m p q r s n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <svg
          aria-label=""
          className="ae af"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.463,4.517l-3.3,3.3a.263.263,0,0,0,0,.371l3.3,3.3a.263.263,0,0,0,.448-.186V4.7A.262.262,0,0,0,9.463,4.517Z"
          />
        </svg>
      </a>
    </li>
    <li
      className="m p ag ah s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="m p ag ah s"
      role="presentation"
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <span>
          …
        </span>
      </a>
    </li>
    <li
      className="m p ag ah s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="m p ag ah s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="m p q r ai aj ak"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab ai ac"
        href="#"
        onClick={[Function]}
      >
        6
      </a>
    </li>
    <li
      className="m p ag ah s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        7
      </a>
    </li>
    <li
      className="m p ag ah s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        8
      </a>
    </li>
    <li
      className="m p ag ah s"
      role="presentation"
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <span>
          …
        </span>
      </a>
    </li>
    <li
      className="m p ag ah s"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        20
      </a>
    </li>
    <li
      className="m p q r s n"
      role={null}
    >
      <a
        aria-label={undefined}
        className="t p u v w x y z ab s ac"
        href="#"
        onClick={[Function]}
      >
        <svg
          aria-label=""
          className="ae af"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.537,11.483l3.3-3.3a.263.263,0,0,0,0-.371l-3.3-3.3a.262.262,0,0,0-.448.186v6.6A.262.262,0,0,0,6.537,11.483Z"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render with collapsed items 2`] = `
"
.a:after {
  content: \\"\\"
}

.b:after {
  display: table
}

.c:after {
  clear: both
}

.d {
  list-style: none
}

.e {
  margin-top: 0px
}

.f {
  margin-left: 0px
}

.g {
  margin-right: 0px
}

.h {
  margin-bottom: 0px
}

.i {
  padding-top: 0px
}

.j {
  padding-left: 0px
}

.k {
  padding-right: 0px
}

.l {
  padding-bottom: 0px
}

.m {
  float: left
}

.n {
  border-radius: 3px
}

.o {
  box-shadow: none
}

.p {
  position: relative
}

.q {
  background-color: #408BC9
}

.r {
  color: #fff
}

.s {
  cursor: pointer
}

.t {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.u {
  display: block
}

.v {
  padding-top: .7em
}

.w {
  padding-bottom: .5em
}

.x {
  padding-left: 1em
}

.y {
  padding-right: 1em
}

.z {
  text-decoration: none
}

.ab {
  color: inherit
}

.ac:focus {
  z-index: 1
}

.ae {
  height: 15px
}

.af {
  fill: #fff
}

.ag {
  background-color: #fff
}

.ah {
  color: #408BC9
}

.ai {
  cursor: default
}

.aj {
  border-color: #62a1d8
}

.ak {
  z-index: 1
}
"
`;
